[project]
name = "main"
version = "0.1.0"
description = "Comparative Evaluation of Drift Detection Methods for Incremental Fine-Tuning in Heat Load Forecasting"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "keras>=3.12.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "optuna>=4.6.0",
    "optuna-integration[tfkeras]>=4.6.0",
    "pandas>=2.3.3",
    "river>=0.23.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
]
